3.03

Add 11 more audio challenges. Some espeak-ng audio adjustments.

3.02

Updated audio with latest espeak-ng generated output using updated phoneme files.

3.01

Initial version with synthetic voice audio for each of the challenges. Mute will disable the voice auto play.

2.32

Update to latest available libGDX and MobiVM's RoboVM.
Removed Sync due to labor involved with tracking API changes for OAUTH and WEBVIEWS.

2.31

Added timer to top of challenge screen to show time remaining for each learning session.

2.30

Misc bug fixes. Add random names for blank named or new sessions.

2.29

Various bug fixes.

2.25

Misc migration code fixes.

2.24

Add code to migrate to internal device storage of slots.

2.23

Misc leaderboard related fixes.

2.21

Change leaderboard to rank by using total count of cards a player is studying.

2.20

Fix scoreboard system crashes. Minor font adjustments.

2.19

Misc bug fixes related to scoreboard.

2.16

Multiple fixes for leaderboard related items.
Try and migrate local leaderboard scores into global public leaderboard.

2.15

Initial ANONYMOUS leaderboard powered by DreamLo added.

2.14

Misc English fixes.

2.12

Fixed issue with extra tone marks for "climb".
Fix issue with "x" mark handling.

2.11

Update libGDX to 1.9.2.
Layout fix for new vocabulary cards.
Added continue button to speed up escape from bad answers.

2.10

Card fixes. Fix vsgina and hia cards to have reduced English answer counts.

2.09

Card fixes. Change correct/incorrect picker to ignore case.

2.08

More English fixes.

2.07

Misc English changes.

2.06

Added "friend" to train for "reciprocal" usage of bound pronouns.
Added "mother" and "father" to train for "relationship" usage of bound pronouns.

2.05

Fix We/is => We are ...

2.04

Added: ᏂᎯ, ᎠᏴ, ᎯᎠ, ᎥᏍᎩᎾ, ᎤᏩ²³Ꮜ, ᎤᏩ⁴Ꮜ, ᎠᎴ ᎤᏤᎵᎢ to flashcards for training.
Fixed issue where tone marks were being removed erronously for certain flashcards.

2.03

Fix errors in English sentence generation.

2.02
